--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,10 @@
     <string name="last_name">Last Name</string>
     <string name="first_name">First name</string>
     <string name="title_activity_temp">temp</string>
+    <string name="title_activity_view_group">ViewGroupActivity</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
 </resources>
