--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MAD Application</string>
+    <string name="app_name">Collaboration Check In</string>
     <string name="username">Email</string>
     <string name="password">Password</string>
     <string name="collaboration_check_in">Collaboration Check in</string>
@@ -29,6 +29,7 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="log_out">Log out</string>
 
 
 </resources>
