Added in firebase code to fragment, but may move to UpdateAdapter to make the fragment more clean

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,7 @@
     <string name="what_s_new">What\'s new?</string>
     <string name="enter_update_title">Enter Update Title</string>
     <string name="publish">publish</string>
+    <string name="update_posted">Update posted</string>
 
 
 </resources>
