--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="invalid_username_password">Username or password do no not match</string>
 
 
-    <string name="title_activity_home">Your Groups</string>
+    <string name="view_groups_activity_title">Your Groups</string>
     <string name="registration_failed">Registration Failed</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -36,6 +36,9 @@
     <string name="enter_update_title">Enter Update Title</string>
     <string name="publish">publish</string>
     <string name="update_posted">Update posted</string>
+    <string name="title_activity_view_groups">ViewGroupsActivity</string>
+    <string name="leave_group">Leave Group</string>
+    <string name="manage_account">Manage Account</string>
 
 
 </resources>
