--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,14 @@
     <string name="title_activity_view_groups">ViewGroupsActivity</string>
     <string name="leave_group">Leave Group</string>
     <string name="manage_account">Manage Account</string>
+    <string name="meeting_date">Meeting Date</string>
+    <string name="meeting_time">Meeting Time</string>
+    <string name="name">Name</string>
+    <string name="description_or_agenda_of_meeting">Description or agenda of meeting</string>
+    <string name="schedule_meeting">Schedule Meeting</string>
+    <string name="meeting_location">Meeting Location</string>
+    <string name="new_meeting">New Meeting</string>
+    <string name="quit_scheduling_meeting">Quit scheduling meeting?</string>
 
 
 </resources>
