ADded in meeting adapter and almost finalised meeting view, but border to the left won't show up on screen (MUST FIX)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,6 +47,9 @@
     <string name="meeting_location">Meeting Location</string>
     <string name="new_meeting">New Meeting</string>
     <string name="quit_scheduling_meeting">Quit scheduling meeting?</string>
+    <string name="remove_meeting_location">Remove Meeting Location</string>
+    <string name="change_meeting_location">Change meeting Location</string>
+    <string name="by">By:&#032;</string>
 
 
 </resources>
