Revamped upload functionality and implemented download functionality

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,5 +71,6 @@
     <string name="upload">Upload</string>
     <string name="file_name">File name</string>
     <string name="camera_upload">Camera upload</string>
+    <string name="download">Download</string>
 
 </resources>
