--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,6 +81,17 @@
     <string name="members">Members</string>
     <string name="input_group_name">Please input a group name</string>
     <string name="input_at_least_one_email">Please input at least one email</string>
+    <string name="due">Due: %s</string>
+    <string name="task_due_date_heading">Task Due Date: </string>
+    <string name="task_description_heading">Task Description:</string>
+    <string name="view_task">View Task</string>
+    <string name="task_already_complete">Task already complete</string>
+    <string name="title_activity_view_meeting">ViewMeetingActivity</string>
+    <string name="meeting_date_title">Meeting Date:</string>
+    <string name="meeting_time_title">Meeting Time:</string>
+    <string name="meeting_location_title">Meeting Location:</string>
+    <string name="meeting_agenda">Meeting Agenda:</string>
+    <string name="view_meeting">View Meeting</string>
 
 
 </resources>
