--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,6 @@
     <string name="password">Password</string>
     <string name="collaboration_check_in">Collaboration Check in</string>
     <string name="login">Login</string>
-    <string name="forgot_password">Forgot Password?</string>
     <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
     <string name="sign_up">Sign up</string>
     <string name="register_now">Register Now</string>
@@ -92,6 +91,12 @@
     <string name="meeting_location_title">Meeting Location:</string>
     <string name="meeting_agenda">Meeting Agenda:</string>
     <string name="view_meeting">View Meeting</string>
+    <string name="quit_creating_group">Quit creating group?</string>
+    <string name="quit_posting_update">Quit posting update?</string>
+    <string name="quit_assigning_task">Quit assigning task?</string>
+    <string name="download_complete">File downloaded to your download folder</string>
+    <string name="view_your_groups">View your groups</string>
+    <string name="not_assigned_to_task">Sorry, you\'re not assigned to this task</string>
 
 
 </resources>
